# r1-genie

./: .gitignore  README.md  pyproject.toml  r1_rapp_tutorial.py
data_generator/: RAG_SETUP.md  README_MODULAR.md  dataset_orchestrator.py  document_parsers.py  embedding_pipeline.py  mcp_rag_server.py  r1_api_dependencies.yaml  r1_canonical_kpis.yaml  r1_dataset_builder_v3.py  r1_domain_knowledge.yaml  r1_intents.yaml  r1_kafka_topics.yaml  r1_rest_apis.yaml  r1_schemas.yaml  r1_workflows.yaml  rag_vendor_mapper.py  test_canonical_kpis.py  test_kpi_generation.py  test_rag_system.py  vendor_detector.py  vendor_doc_api.py  workflow_sample_builder.py
data_generator/outputs/: r1_dataset_summary_modular.json  r1_grpo_dataset_modular.jsonl  r1_sft_dataset_modular.jsonl  r1_validation_audit_modular.csv
